<resources>
    <string name="app_name">Lab</string>

    <string name="hello_world">Hello world!</string>
    <string name="bla_bla">For items that are user-supplied secondary (infrequently used) options. For items that are alternative actions on the data that is currently displayed. Only place this item in the app bar if there is room for it. If there is not room for all the items marked ifRoom, the items with the lowest orderInCategory values are displayed as actions, and the remaining items are displayed in the overflow menu. Always place this item in the app bar. Avoid using this unless its critical that the item always appear in the action bar. Setting multiple items to always appear as action items can result in them overlapping with other UI in the app bar.</string>
    <string name="action_settings">Settings</string>
    <string name="action_post">Post</string>
    <string name="action_scan">Scan</string>
    <string name="action_send">Send</string>
    <string name="action_close">Close</string>

    <string name="waiting">等待</string>
    <string name="start">开始倒计时</string>
    <string name="stop">停止倒计时</string>
    <string name="text_parent">Parent</string>
    <string name="text_child">Child</string>
    <string name="s_post">发布</string>
    <string name="s_count">计时</string>
    <string name="desc_preview">预览图片</string>

    <string name="wheel">Steering Wheel</string>
    <string name="ground">The Ground</string>
    <string name="window">Window Frame</string>
    <string name="sun">The Sun</string>
    <string name="moon">The Moon</string>
    <string name="cloud">A Cloud</string>
    <string name="minute_hand">Minute Hand</string>
    <string name="hour_hand">Hour Hand</string>
    <string name="capture">Capture</string>
    <string name="record">Record</string>
    <string name="example_retain_instance">Retain Instance Example</string>
    <string name="example_bottom">Bottom</string>

    <string name="fragment_retain_instance_msg">Current progress of retained fragment;\n
    restarts if fragment is re-created.</string>
    <string name="restart">Restart</string>
    <string name="button_post">Post</string>
    <string name="text_location">所在位置</string>
    <string name="desc_location_icon">位置图标</string>
    <string name="text_post_hint">这一刻的想法…</string>
    <string name="desc_image_placeholder">Placeholder</string>
    <string name="desc_wechat">Wechat Icon Button</string>
    <string name="title_activity_animation">AnimationActivity</string>

    <string name="button_description">Emoticons Button</string>
    <string name="chat_hint">Enter text here</string>
    <string name="post">Post</string>
    <string name="back">Backspace</string>
    <string name="btn_local">Local</string>
    <string name="text_touch_me">Touch Me</string>
    <string name="title_activity_view">ViewActivity</string>

    <string name="button">Button</string>
    <string name="menu_settings">Settings</string>
    <string name="addView">Add</string>
    <string name="removeView">Remove</string>
    <string name="forceLayout">Layout</string>

    <string name="viewpropertyanimator">ViewPropertyAnimator</string>
    <string name="transient_state">Transient State</string>
    <string name="longer_animate_duration">400ms</string>

    <string name="use_positions">Use Positions</string>
    <string name="delete_selected">Delete Selected</string>
</resources>
