<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:overScrollMode="never"
        android:scrollbars="none">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bla_bla" />
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <VideoView
            android:id="@+id/vv_video"
            android:layout_width="128dp"
            android:layout_height="96dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/ll_stub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_padding"
            android:paddingRight="@dimen/activity_horizontal_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/desc_location_icon"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@string/text_location"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>


        <GridView
            android:id="@+id/gv_pics_selected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/ll_stub"
            android:layout_toLeftOf="@id/vv_video"
            android:layout_toStartOf="@id/vv_video"
            android:horizontalSpacing="@dimen/gridview_horizontal_spacing"
            android:numColumns="4"
            android:verticalSpacing="@dimen/gridview_vertical_spacing" />

    </RelativeLayout>

</LinearLayout>